AR_RU_08 : Newsletter : Developed the newsletter section

--- a/index.html
+++ b/index.html
@@ -568,24 +568,38 @@
         </section>
 
         <section class="newsletter container">
-            <div class="newsletter__headings-wrapper">
-                <h3
-                    class="newsletter__heading section-heading pink-text circular-md"
-                >
-                    SUBSCRIBE TO OUR NEWSLETTER
-                </h3>
-                <h4
-                    class="newsletter__sub-heading section-sub-heading circular-md"
-                >
-                    Prepare yourself & let's explore the beauty of the world
-                </h4>
-            </div>
+            <img
+                src="/assets/images/newsletter/triangle-newsletter.png"
+                class="newsletter__triangles"
+                alt=""
+            />
+            <div class="newsletter-wrapper">
+                <div class="newsletter__headings-wrapper">
+                    <h3
+                        class="newsletter__heading section-heading pink-text circular-md"
+                    >
+                        SUBSCRIBE TO OUR NEWSLETTER
+                    </h3>
+                    <h4
+                        class="newsletter__sub-heading section-sub-heading circular-md"
+                    >
+                        Prepare yourself & let's explore the beauty of the world
+                    </h4>
+                </div>
 
-            <div class="newsletter__form">
-                <input type="text" />
-                <button class="primary--button button newsletter__button">
-                    Subscribe
-                </button>
+                <div class="newsletter__form">
+                    <div class="newsletter__input">
+                        <i class="icon-Vector-8 newsletter__mail-icon"></i>
+                        <input
+                            class="circular-md"
+                            type="email"
+                            placeholder="Your Email"
+                        />
+                    </div>
+                    <button class="button--primary button newsletter__button">
+                        Subscribe
+                    </button>
+                </div>
             </div>
         </section>
 
