--- a/index.html
+++ b/index.html
@@ -10,12 +10,6 @@
         />
         <meta name="keywords" content="travel, hotels, holiday, vacation" />
         <link rel="shortcut icon" href="logo.ico" type="image/x-icon" />
-        <meta
-            name="description"
-            content="Travel website, providing services like holiday packages, luxury hotels, premium airlines and much more"
-        />
-        <meta name="keywords" content="travel, hotels, holiday, vacation" />
-        <link rel="shortcut icon" href="logo.ico" type="image/x-icon" />
     </head>
     <body>
         <!-- Header section -->
@@ -53,6 +47,97 @@
                 </div>
             </nav>
         </header>
+
+        <!-- Hero Section -->
+        <section class="container hero">
+            <!-- Hero section main image container -->
+            <div class="hero__img">
+                <img
+                    src="/assets/images/hero/hero-section-main-img.png"
+                    alt="Collage of travel-themed images: a coastal staircase, a traveler sitting with a backpack in the mountains, and a person photographing a cityscape."
+                />
+            </div>
+
+            <!-- Hero section main content -->
+            <div class="hero__content">
+                <!-- Triangles  -->
+                <div class="hero__triangles">
+                    <img
+                        src="/assets/images/hero/triangles.png"
+                        alt="Triangles Pointing upwards."
+                    />
+                </div>
+
+                <!-- Hero section explore the world  button -->
+                <button class="hero__explore-button button button--secondary">
+                    <span class="explore-button__content pink-text"
+                        >Explore the world!</span
+                    >
+                    <i class="icon-work-1 explore-button__icon pink-text"></i>
+                </button>
+
+                <h1 class="hero__heading circular-md">
+                    Travel
+                    <span class="pink-text">top destination</span>
+                    of the world
+                </h1>
+
+                <h3 class="hero__sub-heading grey-text inter">
+                    We always make our customer happy by providing as many
+                    choices as possible
+                </h3>
+
+                <div class="hero__buttons actions">
+                    <button class="actions__get-started button--primary button">
+                        Get Started
+                    </button>
+                    <button
+                        class="actions__watch-demo watch__demo button button--secondary"
+                    >
+                        <i
+                            class="icon-play-circle5-1 watch-demo__icon purple-text"
+                        ></i>
+                        <span class="watch-demo__text purple-text"
+                            >Watch Demo</span
+                        >
+                    </button>
+                </div>
+            </div>
+        </section>
+
+        <!-- Co-partners -->
+        <section class="co-partners container">
+            <div class="co-partners__img">
+                <img
+                    src="/assets/images/hero/company1.png"
+                    alt="Company logo of tripadvisor, it's a logo and text(lowercase), logo is shaped like an owl."
+                />
+            </div>
+            <div class="co-partners__img">
+                <img
+                    src="/assets/images/hero/company2.png"
+                    alt="Company logo of Expedia, it's a logo and text, the logo is of a airplane taking off"
+                />
+            </div>
+            <div class="co-partners__img">
+                <img
+                    src="/assets/images/hero/company3.png"
+                    alt="Company logo of Booking.com, bold text only"
+                />
+            </div>
+            <div class="co-partners__img">
+                <img
+                    src="/assets/images/hero/company4.png"
+                    alt="Company logo of airbnb, logo and text(lowercase), the logo is shaped like uppercase a"
+                />
+            </div>
+            <div class="co-partners__img">
+                <img
+                    src="/assets/images/hero/company5.png"
+                    alt="Company logo of Rbitz , logo and text(uppercase and bold), the logo is 2 arrows pointing towards end of each other, kind of like a loop."
+                />
+            </div>
+        </section>
 
         <script type="module" src="./src/script/index.js"></script>
 
