AR_RU_09 : Footer : Developed footer accordian for mobile devices

--- a/index.html
+++ b/index.html
@@ -603,6 +603,93 @@
             </div>
         </section>
 
+        <footer class="footer container">
+            <div class="footer__travlog circular-md">
+                <div class="footer__content">
+                    <div class="footer__heading-wrapper">
+                        <a href="#" class="footer__logo">
+                            <i
+                                class="icon-Vector-9 gradient-purple-to-pink"
+                            ></i>
+                        </a>
+                        <span class="footer__heading"> Travlog </span>
+                    </div>
+
+                    <div class="footer__desc grey-text">
+                        Contrary to popular belief, Lorem Ipsum is not simply
+                        random text. It has roots in a piece of classical Latin
+                        literature from 45 BC.
+                    </div>
+                </div>
+
+                <div class="footer__socials">
+                    <button
+                        class="button--primary button footer__socials-container purple-bg"
+                    >
+                        <i class="icon-facebook white-text"></i>
+                    </button>
+                    <button
+                        class="button--primary button footer__socials-container purple-bg"
+                    >
+                        <i class="icon-Vector-13 white-text"></i>
+                    </button>
+                    <button
+                        class="button--primary button footer__socials-container purple-bg"
+                    >
+                        <i class="icon-Vector-14 white-text"></i>
+                    </button>
+                </div>
+            </div>
+
+            <div class="footer__mobile">
+                <div class="footer__accordian-wrapper">
+                    <button class="footer__accordian circular-md">
+                        <span>Company</span>
+                        <i class="icon-arrow-circle-down9-1"></i>
+                    </button>
+                    <div class="panel">
+                        <ul class="panel__list inter">
+                            <li class="panel__list-item">About</li>
+                            <li class="panel__list-item">Career</li>
+                            <li class="panel__list-item">Mobile</li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="footer__accordian-wrapper">
+                    <button class="footer__accordian circular-md">
+                        <span>Contact Us</span>
+                        <i class="icon-arrow-circle-down9-1"></i>
+                    </button>
+                    <div class="panel">
+                        <ul class="panel__list inter">
+                            <li class="panel__list-item">Why Travlog?</li>
+                            <li class="panel__list-item">Partner with us</li>
+                            <li class="panel__list-item">FAQ's</li>
+                            <li class="panel__list-item">Blog</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="footer__accordian-wrapper">
+                    <button class="footer__accordian circular-md">
+                        <span>Meet Us</span>
+                        <i class="icon-arrow-circle-down9-1"></i>
+                    </button>
+                    <div class="panel">
+                        <ul class="panel__list inter">
+                            <li class="panel__list-item">+00 92 1234 56789</li>
+                            <li class="panel__list-item">info@travlog.com</li>
+                            <li class="panel__list-item">
+                                205. R Street, New York
+                            </li>
+                            <li class="panel__list-item">BD23200</li>
+                            circular-md
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </footer>
+
         <script type="module" src="./src/script/index.js"></script>
 
         <!-- For browsers that have JS diabled  -->
