AR_RU_04 : Services : Fixed issues

--- a/index.html
+++ b/index.html
@@ -16,12 +16,18 @@
         <header class="header white-bg container">
             <!-- Website logo -->
             <a href="#" class="header__logo">
-                <i class="icon-Vector-9 gradient-purple-to-pink"></i>
+                <i
+                    class="icon-Vector-9 gradient-purple-to-pink"
+                    aria-hidden="true"
+                ></i>
             </a>
 
             <!--Hamburger button-->
             <button class="header__hamburger js-header__hamburger">
-                <i class="icon-Vector purple-text js-sidebar__icon"></i>
+                <i
+                    class="icon-Vector purple-text js-sidebar__icon"
+                    aria-hidden="true"
+                ></i>
             </button>
 
             <!--Navigation Links-->
@@ -65,6 +71,7 @@
                     <img
                         src="/assets/images/hero/triangles.png"
                         alt="Triangles Pointing upwards."
+                        aria-hidden="true"
                     />
                 </div>
 
@@ -73,7 +80,10 @@
                     <span class="explore-button__content pink-text"
                         >Explore the world!</span
                     >
-                    <i class="icon-work-1 explore-button__icon pink-text"></i>
+                    <i
+                        class="icon-work-1 explore-button__icon pink-text"
+                        aria-hidden="true"
+                    ></i>
                 </button>
 
                 <h1 class="hero__heading circular-md">
@@ -96,6 +106,7 @@
                     >
                         <i
                             class="icon-play-circle5-1 watch-demo__icon purple-text"
+                            aria-hidden="true"
                         ></i>
                         <span class="watch-demo__text purple-text"
                             >Watch Demo</span
@@ -154,7 +165,7 @@
             <!-- Services card container -->
             <div class="services__cards-container">
                 <!-- Services tour guide card -->
-                <div class="services__card card">
+                <div class="services__card card card--lg">
                     <!-- Services card 1 image -->
                     <div class="card__img">
                         <img
@@ -165,19 +176,17 @@
 
                     <div class="card__content-wrapper">
                         <!-- Services card 1 heading -->
-                        <div class="card__title circular-md">
-                            Best Tour Guide
-                        </div>
+                        <h3 class="card__title circular-md">Best Tour Guide</h3>
 
                         <!-- Services card 1 description -->
-                        <div class="card__desc inter grey-text">
+                        <h5 class="card__desc inter grey-text">
                             What looked like a small patch of purple grass,
                             above five feet.
-                        </div>
+                        </h5>
                     </div>
                 </div>
 
-                <div class="services__card card">
+                <div class="services__card card card--lg">
                     <!-- Services card 2 image -->
                     <div class="card__img">
                         <img
@@ -188,17 +197,17 @@
 
                     <div class="card__content-wrapper">
                         <!-- Services card 2 heading -->
-                        <div class="card__title circular-md">Easy Booking</div>
+                        <h3 class="card__title circular-md">Easy Booking</h3>
 
                         <!-- Services card 2 description -->
-                        <div class="card__desc inter grey-text">
+                        <h5 class="card__desc inter grey-text">
                             Square, was moving across the sand in their
                             direction.
-                        </div>
+                        </h5>
                     </div>
                 </div>
 
-                <div class="services__card services__card3 card">
+                <div class="services__card services__card3 card card--lg">
                     <!-- Services card 3 image -->
                     <div class="card__img">
                         <img
@@ -209,15 +218,15 @@
 
                     <div class="card__content-wrapper">
                         <!-- Services card 3 heading -->
-                        <div class="card__title circular-md">
+                        <h3 class="card__title circular-md">
                             Weather Forecast
-                        </div>
+                        </h3>
 
                         <!-- Services card 3 description -->
-                        <div class="card__desc inter grey-text">
+                        <h5 class="card__desc inter grey-text">
                             What looked like a small patch of purple grass,
                             above five feet.
-                        </div>
+                        </h5>
                     </div>
                 </div>
             </div>
