--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
                     </div>
 
                     <div class="travel__cards-group1">
-                        <div class="tarvel__card card">
+                        <div class="tarvel__card card card--sm">
                             <h2 class="card__heading orange-text circular-md">
                                 500+
                             </h2>
@@ -269,7 +269,7 @@
                                 Holiday Package
                             </h3>
                         </div>
-                        <div class="tarvel__card card">
+                        <div class="tarvel__card card card--sm">
                             <h2 class="card__heading orange-text circular-md">
                                 100
                             </h2>
@@ -279,7 +279,7 @@
                         </div>
                     </div>
                     <div class="travel__cards-group2">
-                        <div class="tarvel__card card">
+                        <div class="tarvel__card card card--sm">
                             <h2 class="card__heading orange-text circular-md">
                                 7
                             </h2>
@@ -287,7 +287,7 @@
                                 Premium Airlines
                             </h3>
                         </div>
-                        <div class="tarvel__card card">
+                        <div class="tarvel__card card card--sm">
                             <h2 class="card__heading orange-text circular-md">
                                 2k+
                             </h2>
