AR_RU_04 : Services : Made some minute changes

--- a/index.html
+++ b/index.html
@@ -127,19 +127,19 @@
             <div class="co-partners__img">
                 <img
                     src="/assets/images/hero/company2.png"
-                    alt="Company logo of Expedia, it's a logo and text, the logo is of a airplane taking off"
+                    alt="Company logo of Expedia, it's a logo and text, the logo is of a airplane taking off."
                 />
             </div>
             <div class="co-partners__img">
                 <img
                     src="/assets/images/hero/company3.png"
-                    alt="Company logo of Booking.com, bold text only"
+                    alt="Company logo of Booking.com, bold text only."
                 />
             </div>
             <div class="co-partners__img">
                 <img
                     src="/assets/images/hero/company4.png"
-                    alt="Company logo of airbnb, logo and text(lowercase), the logo is shaped like uppercase a"
+                    alt="Company logo of airbnb, logo and text(lowercase), the logo is shaped like uppercase a."
                 />
             </div>
             <div class="co-partners__img">
