--- a/index.html
+++ b/index.html
@@ -649,9 +649,15 @@
                     </button>
                     <div class="panel">
                         <ul class="panel__list inter">
-                            <li class="panel__list-item">About</li>
-                            <li class="panel__list-item">Career</li>
-                            <li class="panel__list-item">Mobile</li>
+                            <li class="panel__list-item">
+                                <a href="">About</a>
+                            </li>
+                            <li class="panel__list-item">
+                                <a href="">Career</a>
+                            </li>
+                            <li class="panel__list-item">
+                                <a href="">Mobile</a>
+                            </li>
                         </ul>
                     </div>
                 </div>
@@ -663,10 +669,18 @@
                     </button>
                     <div class="panel">
                         <ul class="panel__list inter">
-                            <li class="panel__list-item">Why Travlog?</li>
-                            <li class="panel__list-item">Partner with us</li>
-                            <li class="panel__list-item">FAQ's</li>
-                            <li class="panel__list-item">Blog</li>
+                            <li class="panel__list-item">
+                                <a href="">Why Travlog?</a>
+                            </li>
+                            <li class="panel__list-item">
+                                <a href="">Partner with us</a>
+                            </li>
+                            <li class="panel__list-item">
+                                <a href="">FAQ's</a>
+                            </li>
+                            <li class="panel__list-item">
+                                <a href="">Blog</a>
+                            </li>
                         </ul>
                     </div>
                 </div>
@@ -677,15 +691,72 @@
                     </button>
                     <div class="panel">
                         <ul class="panel__list inter">
-                            <li class="panel__list-item">+00 92 1234 56789</li>
+                            <li class="panel__list-item">
+                                <a href="#">+00 92 1234 56789</a>
+                            </li>
                             <li class="panel__list-item">info@travlog.com</li>
                             <li class="panel__list-item">
-                                205. R Street, New York
+                                <a href=""> 205. R Street, New York BD23200 </a>
                             </li>
-                            <li class="panel__list-item">BD23200</li>
-                            circular-md
                         </ul>
                     </div>
+                </div>
+            </div>
+
+            <div class="footer__tablet">
+                <div class="footer__column">
+                    <div class="footer__column-heading circular-md">
+                        Company
+                    </div>
+                    <ul class="footer__list inter">
+                        <li class="footer__list-item">
+                            <a href=""> About </a>
+                        </li>
+                        <li class="footer__list-item">
+                            <a href=""> Career </a>
+                        </li>
+                        <li class="footer__list-item">
+                            <a href=""> Mobile </a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="footer__column">
+                    <div class="footer__column-heading circular-md">
+                        Contact
+                    </div>
+                    <ul class="footer__list inter">
+                        <li class="footer__list-item">
+                            <a href=""> Why Travlog? </a>
+                        </li>
+                        <li class="footer__list-item">
+                            <a href=""> Partner with us </a>
+                        </li>
+                        <li class="footer__list-item">
+                            <a href=""> FAQ's </a>
+                        </li>
+                        <li class="footer__list-item">
+                            <a href="">Blog</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="footer__column">
+                    <div class="footer__column-heading circular-md">
+                        Meet Us
+                    </div>
+                    <ul class="footer__list inter">
+                        <li class="footer__list-item">
+                            <a href=""> +00 92 1234 56789 </a>
+                        </li>
+                        <li class="footer__list-item">
+                            <a href=""> info@travlog.com </a>
+                        </li>
+                        <li class="footer__list-item">
+                            <a href="">
+                                <div>205. R Street, New York</div>
+                                <div>BD23200</div>
+                            </a>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </footer>
