AR_RU_05 : Travel : Made travel section pixel perfect

--- a/index.html
+++ b/index.html
@@ -234,7 +234,10 @@
 
         <section class="travel container">
             <div class="travel__img">
-                <img src="/assets/images/travel/bg.png" alt="" />
+                <img
+                    src="/assets/images/travel/bg.png"
+                    alt="Image of a happy lady sitting on a travel bag."
+                />
             </div>
 
             <div class="travel__content">
@@ -255,8 +258,9 @@
                 <div class="travel__cards-container">
                     <div class="travel__icon">
                         <img
-                            src="./public/assets/images/travel/icon-yellow.png"
-                            alt=""
+                            src="/assets/images/travel/icon-yellow.png"
+                            alt="Image of an icon that resembles a bag with a star in the middle"
+                            aria-hidden="true"
                         />
                     </div>
 
