AR_RU_06 : Key Features : Made this section pixel perfect

--- a/index.html
+++ b/index.html
@@ -325,9 +325,9 @@
                     from 45 BC.
                 </h4>
                 <div class="features__card-container">
-                    <div class="features__card card">
+                    <div class="features__card card card--sm-horizontal">
                         <div class="card__icon-container orange-bg">
-                            <i class="icon-Vector-4"></i>
+                            <i class="icon-Vector-4" aria-hidden="true"></i>
                         </div>
                         <div class="card__text-wrapper">
                             <h2 class="circular-md card-heading">
@@ -338,9 +338,9 @@
                             </h3>
                         </div>
                     </div>
-                    <div class="features__card card">
+                    <div class="features__card card card--sm-horizontal">
                         <div class="card__icon-container yellow-bg">
-                            <i class="icon-Vector-5"></i>
+                            <i class="icon-Vector-5" aria-hidden="true"></i>
                         </div>
                         <div class="card__text-wrapper">
                             <h2 class="circular-md card-heading">
@@ -351,9 +351,9 @@
                             </h3>
                         </div>
                     </div>
-                    <div class="features__card card">
+                    <div class="features__card card card--sm-horizontal">
                         <div class="card__icon-container orange-bg">
-                            <i class="icon-Vector-12"></i>
+                            <i class="icon-Vector-12" aria-hidden="true"></i>
                         </div>
                         <div class="card__text-wrapper">
                             <h2 class="circular-md card-heading">
