AR_RU_07 : Testimonial : Enhanced accessibility

--- a/index.html
+++ b/index.html
@@ -404,27 +404,42 @@
                                             <div
                                                 class="slide__star yellow-text"
                                             >
-                                                <i class="icon-Vector-7"></i>
+                                                <i
+                                                    class="icon-Vector-7"
+                                                    aria-hidden="true"
+                                                ></i>
                                             </div>
                                             <div
                                                 class="slide__star yellow-text"
                                             >
-                                                <i class="icon-Vector-7"></i>
+                                                <i
+                                                    class="icon-Vector-7"
+                                                    aria-hidden="true"
+                                                ></i>
                                             </div>
                                             <div
                                                 class="slide__star yellow-text"
                                             >
-                                                <i class="icon-Vector-7"></i>
+                                                <i
+                                                    class="icon-Vector-7"
+                                                    aria-hidden="true"
+                                                ></i>
                                             </div>
                                             <div
                                                 class="slide__star yellow-text"
                                             >
-                                                <i class="icon-Vector-7"></i>
+                                                <i
+                                                    class="icon-Vector-7"
+                                                    aria-hidden="true"
+                                                ></i>
                                             </div>
                                             <div
                                                 class="slide__star yellow-text"
                                             >
-                                                <i class="icon-Vector-7"></i>
+                                                <i
+                                                    class="icon-Vector-7"
+                                                    aria-hidden="true"
+                                                ></i>
                                             </div>
                                         </div>
                                     </div>
@@ -464,27 +479,42 @@
                                             <div
                                                 class="slide__star yellow-text"
                                             >
-                                                <i class="icon-Vector-7"></i>
+                                                <i
+                                                    class="icon-Vector-7"
+                                                    aria-hidden="true"
+                                                ></i>
                                             </div>
                                             <div
                                                 class="slide__star yellow-text"
                                             >
-                                                <i class="icon-Vector-7"></i>
+                                                <i
+                                                    class="icon-Vector-7"
+                                                    aria-hidden="true"
+                                                ></i>
                                             </div>
                                             <div
                                                 class="slide__star yellow-text"
                                             >
-                                                <i class="icon-Vector-7"></i>
+                                                <i
+                                                    class="icon-Vector-7"
+                                                    aria-hidden="true"
+                                                ></i>
                                             </div>
                                             <div
                                                 class="slide__star yellow-text"
                                             >
-                                                <i class="icon-Vector-7"></i>
+                                                <i
+                                                    class="icon-Vector-7"
+                                                    aria-hidden="true"
+                                                ></i>
                                             </div>
                                             <div
                                                 class="slide__star yellow-text"
                                             >
-                                                <i class="icon-Vector-7"></i>
+                                                <i
+                                                    class="icon-Vector-7"
+                                                    aria-hidden="true"
+                                                ></i>
                                             </div>
                                         </div>
                                     </div>
@@ -523,27 +553,42 @@
                                             <div
                                                 class="slide__star yellow-text"
                                             >
-                                                <i class="icon-Vector-7"></i>
+                                                <i
+                                                    class="icon-Vector-7"
+                                                    aria-hidden="true"
+                                                ></i>
                                             </div>
                                             <div
                                                 class="slide__star yellow-text"
                                             >
-                                                <i class="icon-Vector-7"></i>
+                                                <i
+                                                    class="icon-Vector-7"
+                                                    aria-hidden="true"
+                                                ></i>
                                             </div>
                                             <div
                                                 class="slide__star yellow-text"
                                             >
-                                                <i class="icon-Vector-7"></i>
+                                                <i
+                                                    class="icon-Vector-7"
+                                                    aria-hidden="true"
+                                                ></i>
                                             </div>
                                             <div
                                                 class="slide__star yellow-text"
                                             >
-                                                <i class="icon-Vector-7"></i>
+                                                <i
+                                                    class="icon-Vector-7"
+                                                    aria-hidden="true"
+                                                ></i>
                                             </div>
                                             <div
                                                 class="slide__star yellow-text"
                                             >
-                                                <i class="icon-Vector-7"></i>
+                                                <i
+                                                    class="icon-Vector-7"
+                                                    aria-hidden="true"
+                                                ></i>
                                             </div>
                                         </div>
                                     </div>
@@ -565,12 +610,12 @@
                     <button
                         class="splide__arrow splide__arrow--prev button--secondary button"
                     >
-                        <i class="icon-Bold-Outline-1"></i>
+                        <i class="icon-Bold-Outline-1" aria-hidden="true"></i>
                     </button>
                     <button
                         class="splide__arrow splide__arrow--next button--primary button"
                     >
-                        <i class="icon-Bold-Outline"></i>
+                        <i class="icon-Bold-Outline" aria-hidden="true"></i>
                     </button>
                 </div>
             </div>
