AR_RU_08 : Newsletter : Made newsletter pixel perfect

--- a/index.html
+++ b/index.html
@@ -622,11 +622,6 @@
         </section>
 
         <section class="newsletter container">
-            <img
-                src="/assets/images/newsletter/triangle-newsletter.png"
-                class="newsletter__triangles"
-                alt=""
-            />
             <div class="newsletter-wrapper">
                 <div class="newsletter__headings-wrapper">
                     <h3
@@ -643,7 +638,10 @@
 
                 <div class="newsletter__form">
                     <div class="newsletter__input">
-                        <i class="icon-Vector-8 newsletter__mail-icon"></i>
+                        <i
+                            class="icon-Vector-8 newsletter__mail-icon"
+                            aria-hidden="true"
+                        ></i>
                         <input
                             class="circular-md"
                             type="email"
