AR_RU_06 : Key features : Made components more reusable

--- a/index.html
+++ b/index.html
@@ -265,7 +265,9 @@
                     </div>
 
                     <div class="travel__cards-group1">
-                        <div class="tarvel__card card card--sm">
+                        <div
+                            class="tarvel__card card card--sm card__content-center"
+                        >
                             <h2 class="card__heading orange-text circular-md">
                                 500+
                             </h2>
@@ -273,7 +275,9 @@
                                 Holiday Package
                             </h3>
                         </div>
-                        <div class="tarvel__card card card--sm">
+                        <div
+                            class="tarvel__card card card--sm card__content-center"
+                        >
                             <h2 class="card__heading orange-text circular-md">
                                 100
                             </h2>
@@ -283,7 +287,9 @@
                         </div>
                     </div>
                     <div class="travel__cards-group2">
-                        <div class="tarvel__card card card--sm">
+                        <div
+                            class="tarvel__card card card--sm card__content-center"
+                        >
                             <h2 class="card__heading orange-text circular-md">
                                 7
                             </h2>
@@ -291,7 +297,9 @@
                                 Premium Airlines
                             </h3>
                         </div>
-                        <div class="tarvel__card card card--sm">
+                        <div
+                            class="tarvel__card card card--sm card__content-center"
+                        >
                             <h2 class="card__heading orange-text circular-md">
                                 2k+
                             </h2>
@@ -325,7 +333,7 @@
                     from 45 BC.
                 </h4>
                 <div class="features__card-container">
-                    <div class="features__card card card--sm-horizontal">
+                    <div class="features__card card card--horizontal">
                         <div class="card__icon-container orange-bg">
                             <i class="icon-Vector-4" aria-hidden="true"></i>
                         </div>
@@ -338,7 +346,7 @@
                             </h3>
                         </div>
                     </div>
-                    <div class="features__card card card--sm-horizontal">
+                    <div class="features__card card card--horizontal">
                         <div class="card__icon-container yellow-bg">
                             <i class="icon-Vector-5" aria-hidden="true"></i>
                         </div>
@@ -351,7 +359,7 @@
                             </h3>
                         </div>
                     </div>
-                    <div class="features__card card card--sm-horizontal">
+                    <div class="features__card card card--horizontal">
                         <div class="card__icon-container orange-bg">
                             <i class="icon-Vector-12" aria-hidden="true"></i>
                         </div>
