--- a/index.html
+++ b/index.html
@@ -803,10 +803,7 @@
                             <a href=""> info@travlog.com </a>
                         </li>
                         <li class="footer__list-item">
-                            <a href="">
-                                <div>205. R Street, New York</div>
-                                <div>BD23200</div>
-                            </a>
+                            <a href=""> 205. R Street, New York BD23200 </a>
                         </li>
                     </ul>
                 </div>
